<resources>
    <string name="app_name">BindingAndSQLite</string>
    <string name="toolbar_title">Keyboard Inventory</string>
    <string name="kb_hint">Keyboard name and specifications</string>
    <string name="price_hint">Insert the keyboard price</string>
    <string name="add_kb">Add Keyboard</string>
    <string name="show_kbs">Show Inventory</string>
    <string name="update_title">Update Keyboard</string>
    <string name="update_kb">Update</string>
</resources>