<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateActivity"
    android:orientation="vertical"
    android:background="?attr/backgroundColor">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:layout_marginBottom="20dp"
        app:title="@string/update_title"
        app:titleTextColor="@color/backgroundColor"
        android:elevation="4dp"
        app:layout_collapseMode="pin"/>

    <EditText
        android:id="@+id/kb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:inputType="textMultiLine"
        android:hint="@string/kb_hint"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:inputType="numberDecimal"
        android:hint="@string/price_hint"/>

    <Button
        android:id="@+id/updateKBBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_kb"
        android:textColor="@color/colorPrimary"
        android:backgroundTint="?attr/colorSecondary"
        android:layout_marginVertical="25dp"
        android:layout_gravity="center"/>

</LinearLayout>